--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,12 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "lodash": "^4.17.21",
-    "react-select": "^5.2.1"
+    "react-select": "^5.2.1",
+    "react-tooltip": "^4.2.21"
   }
 }
