feat: Add docker setups for dev and prod
- Updates poetry to latest version
- Updates dependencies to latest versions
- Adds missing dependencies to poetry
- Updates to latest version of django-tailwind

- Adds docker setup for development with mounted project folder
- Adds docker setup for production using gunicorn and nginx
- Adjusts settings.py to use values from environment variables

- Adjusts some model fields to accomodate new value ranges in 0.9.15+

- Adds a simple github workflow to build the production image

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,10 +11,11 @@ data_api/raw_data/*
 data_api/static/data_api/*
 !data_api/static/data_api/.gitkeep
 
-es_outfitter/static/*
-!es_outfitter/static/.gitkeep
-
 **/main.js
+
+.git/
+
+db/db.sqlite3
 
 ### Django ###
 *.log
