--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.8"
 Django = "^3.2.9"
 djangorestframework = "^3.12.4"
 requests = "^2.26.0"
+django-cors-headers = "^3.13.0"
+django-tailwind = "^3.4.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
