feat: Add deployment to workflow
- Renames `ci.yml` to `build.yml`
- `build` workflow now also builds nginx container
- Adjusts `docker-compose.prod.yml` to use images from dockerhub rather
rather than building from source
- Adds `deploy` workflow to copy `docker-compose` and `.env.prod` files
onto the server and start the project

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -2,10 +2,7 @@ version: '3'
 
 services:
   es-outfitter:
-    image: thorndeux/es-outfitter:prod
-    build:
-      context: ../
-      dockerfile: docker/Dockerfile.prod
+    image: thorndeux/es-outfitter:latest
     env_file:
       - ./.env.prod
     volumes: 
@@ -16,12 +13,9 @@ services:
       - 8000:8000
 
   nginx:
-    build:
-      context: nginx
+    image: thorndeux/eso-nginx:latest
     volumes:
       - static_files:/home/app/web/staticfiles
-    ports:
-      - 1337:80
     depends_on:
       - es-outfitter
     
