--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,16 +10,24 @@ on:
       - completed
 
 jobs:
-  deploy-staging:
+  deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: burnett01/rsync-deployments@5.2.1
+      - uses: appleboy/scp-action@master
         with:
-          switches:
-          path:
-          remote_path: /var/www/html/
-          remote_host: example.com
-          remote_user: admin
-          remote_key: ${{ secrets.DEPLOY_KEY }}
+          host: ${{ secrets.ESO_HOST }}
+          username: ${{ secrets.ESO_USERNAME }}
+          key: ${{ secrets.ESO_SSH_KEY }}
+          source: "docker/docker-compose.prod.yml,docker/.env.prod"
+          target: "/home/${{ secrets.ESO_USERNAME }}/es-outfitter"
+          strip_components: 1
+      - uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.ESO_HOST }}
+          username: ${{ secrets.ESO_USERNAME }}
+          key: ${{ secrets.ESO_SSH_KEY }}
+          script: |
+            docker compose -f /home/${{ secrets.ESO_USERNAME }}/es-outfitter/docker-compose.prod.yml down || true
+            docker compose -f /home/${{ secrets.ESO_USERNAME }}/es-outfitter/docker-compose.prod.yml up
