fix: Remove quotes from workflow conditional
The workflow `deploy` was not triggering, even though the triggering
workflow `build` completed successfully. This is likely due to a syntax
error, namely quoting the triggering workflow name.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,10 +2,7 @@ name: deploy
 
 on:
   workflow_run:
-    workflows:
-      - 'build'
-    branches:
-      - 'develop'
+    workflows: [ build ]
     types:
       - completed
 
