fix: Dummy change to trigger workflow
It turns out that workflows can only be triggered by `workflow_run` if
if the .yml file exists on the default branch. After having merged all
changes into master, this commit test whether the worflow will trigger.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: deploy
 on:
   workflow_run:
     workflows: [ build ]
-    types:
-      - completed
+    types: [ completed ]
 
 jobs:
   deploy:
