fix: Switch to dynamic url when making API calls

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -18,7 +18,8 @@ services:
       - static_files:/home/app/web/staticfiles
     depends_on:
       - es-outfitter
-    
+    ports:
+     - 80:80
 
 volumes:
   raw_data:
