--- a/docker/.env.prod
+++ b/docker/.env.prod
@@ -1,4 +1,4 @@
 DJANGO_SETTINGS_MODULE=es_outfitter.settings
 SECRET_KEY='@+3(z%61m=(!ug2bv_fpq6%$qu2y8())&eocy6n1zkb!brr%(x'
 DEBUG=False
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 212.227.175.126 eb95bf4.online-server.cloud
