feat: Switch to https
Following [this tutorial](https://blog.jarrousse.org/2022/04/09/an-elegant-way-to-use-docker-compose-to-obtain-and-renew-a-lets-encrypt-ssl-certificate-with-certbot-and-configure-the-nginx-service-to-use-it/)
an SSL certificate was obtained outside the scope of this project.
The setup for that project can be found at
https://github.com/thorndeux/docker-cerbot-setup.

- Adjusts `docker-compose.prod.yml` to include certbot
- Adjusts ports in `docker-compose.prod.yml` to work with SSL
- Adjusts `entrypoint.sh` to bind unicorn to port 443
- Removes some variables from `.env.prod`. They are added during the
deploy workflow
- Adjusts deploy workflow to add environment variables to `.env.prod`
- Adds cron script and cronjob entry to clean up
containers and renew certificate
- Adjusts deploy workflow to add cronjob to host crontab
- Switch from normal nginx config file to config template
- Adjust nginx config template to work with SSL
- Adjust nginx Dockerfile to use template

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,16 @@ jobs:
           key: ${{ secrets.ESO_SSH_KEY }}
           script: |
             docker compose -f /home/${{ secrets.ESO_USERNAME }}/es-outfitter/docker-compose.prod.yml down || true
+      - run: |
+          echo SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> docker/.env.prod
+          echo DJANGO_ALLOWED_HOSTS=${{ secrets.ESO_HOST }} >> docker/.env.prod
+          echo DOMAIN=${{ secrets.ESO_HOST }} >> docker/.env.prod
       - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.ESO_HOST }}
           username: ${{ secrets.ESO_USERNAME }}
           key: ${{ secrets.ESO_SSH_KEY }}
-          source: "docker/docker-compose.prod.yml,docker/.env.prod"
+          source: "docker/docker-compose.prod.yml,docker/.env.prod,docker/cron.sh"
           target: "/home/${{ secrets.ESO_USERNAME }}/es-outfitter"
           strip_components: 1
           overwrite: true
@@ -33,6 +37,7 @@ jobs:
           username: ${{ secrets.ESO_USERNAME }}
           key: ${{ secrets.ESO_SSH_KEY }}
           script: |
+            crontab docker/crontab
             docker pull thorndeux/es-outfitter
-            docker pull thourndeux/eso-docker
+            docker pull thorndeux/eso-docker
             docker compose -f /home/${{ secrets.ESO_USERNAME }}/es-outfitter/docker-compose.prod.yml up -d
