--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -3,25 +3,47 @@ version: '3'
 services:
   es-outfitter:
     image: thorndeux/es-outfitter:latest
+    restart: unless-stopped
     env_file:
       - ./.env.prod
     volumes: 
       - raw_data:/app/data_api/raw_data:rw
       - static_files:/app/es_outfitter/static:rw
       - db:/app/db:rw
-    ports:
-      - 8000:8000
+    expose:
+      - "443"
 
   nginx:
     image: thorndeux/eso-nginx:latest
+    restart: unless-stopped
+    environment:
+      - DOMAIN
     volumes:
       - static_files:/home/app/web/staticfiles
+      - etc/letsencrypt:/etc/letsencrypt:ro
+      - certbot-data:/var/www/certbot
     depends_on:
       - es-outfitter
     ports:
      - 80:80
+     - 443:443
+
+  certbot:
+    container_name: certbot
+    image: certbot/certbot:latest
+    depends_on:
+      - nginx
+    command: >-
+             certonly --reinstall --webroot --webroot-path=/var/www/certbot
+             --email ${EMAIL} --agree-tos --no-eff-email
+             -d ${DOMAIN}
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - cerbot-data:/var/www/certbot
 
 volumes:
   raw_data:
   static_files:
   db:
+  certbot-data:
+    external: true
