--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           script: |
             docker compose -f /home/${{ secrets.ESO_USERNAME }}/es-outfitter/docker-compose.prod.yml down || true
       - run: |
-          echo SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> docker/.env.prod
+          echo SECRET_KEY='${{ secrets.DJANGO_SECRET_KEY }}' >> docker/.env.prod
           echo DJANGO_ALLOWED_HOSTS=${{ secrets.ESO_HOST }} >> docker/.env.prod
           echo DOMAIN=${{ secrets.ESO_HOST }} >> docker/.env.prod
       - uses: appleboy/scp-action@master
