fix: Fix typo in docker-compose file

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -39,7 +39,7 @@ services:
              -d ${DOMAIN}
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
-      - cerbot-data:/var/www/certbot
+      - certbot-data:/var/www/certbot
 
 volumes:
   raw_data:
