--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - static_files:/home/app/web/staticfiles
       - /etc/letsencrypt:/etc/letsencrypt:ro
-      - certbot-data:/var/www/certbot
+      - docker-cerbot-setup_certbot-data:/var/www/certbot
     depends_on:
       - es-outfitter
     ports:
