--- a/docker/nginx/default.conf.template
+++ b/docker/nginx/default.conf.template
@@ -25,7 +25,7 @@ server {
     }
 
     location / {
-        proxy_pass https://es-outfitter;
+        proxy_pass http://es-outfitter;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
