feat: Add compact mode for hull and oufit lists
- Adds compact versions of HullCard and OutfitCard
- Adds 'Start build' button to HullCard
- Removes 'Start build' tooltip from top section of HullCard
- Adds state variable to hold page size
- Adds state variables for small and large page sizes
- Adds button to toggle between detailed and compact views to hull and
outfit select menus
- Adds dispatch action to toggle between detailed and compact views

- Adjusts regex to parse hull category to accomodate missing quotes in
Puffin ship definition

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           target: "/home/${{ secrets.ESO_USERNAME }}/es-outfitter"
           strip_components: 1
           overwrite: true
-      # Add environment variables to .env file
+      # Add environment variables to .env file or export them directly
       # Add crontab entry
       # Pull latest images
       # Start project
