--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.7.0",
     "react-select": "^5.2.1",
     "react-tooltip": "^4.2.21"
   }
