--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,23 +11,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/runtime": "^7.16.0",
-    "babel-loader": "^8.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "webpack": "^5.61.0",
-    "webpack-cli": "^4.9.1"
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.20.13",
+    "@testing-library/react": "^13.4.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.7.0",
-    "react-select": "^5.2.1",
-    "react-tooltip": "^4.2.21"
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.0",
+    "react-tooltip": "^5.7.5"
   }
 }
